--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,50 @@
+body {
+  background-color: #f9f7fe;
+  font-family: sans-serif;
+}
 h1 {
   text-align: center;
+  font-size: 36px;
 }
+h3 {
+  margin: 0 0 5px;
+  font-size: 36px;
+}
+select {
+  display: block;
+  max-width: 100%;
+  font-size: 20px;
+  border-radius: 7px;
+  padding: 12px;
+}
+.container {
+  max-width: 600px;
+  background-color: whitesmoke;
+  margin: 60px auto;
+  padding: 25px 0;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 12px;
+}
+.city {
+  display: flex;
+  margin: 12px auto;
+  justify-content: space-between;
+  padding: 25px 0;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+}
+.city:last-child {
+  border: none;
+}
+.date {
+  opacity: 0.8;
+}
+.time {
+  font-weight: bold;
+  font-size: 50px;
+}
+
 footer {
+  text-align: center;
   font-size: 22px;
+  opacity: 0.8;
 }
